# claim-photo-editor

./: .gitignore  CLAUDE.md  README.md  claim-photo-editor.spec  pyproject.toml  renovate.json
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml
scripts/: release.py
src/claim_photo_editor/: __init__.py  app.py  config.py  main.py
src/claim_photo_editor/models/: __init__.py  photo.py
src/claim_photo_editor/resources/: icon.icns
src/claim_photo_editor/services/: __init__.py  pdf_generator.py  thumbnail_cache.py  updater.py
src/claim_photo_editor/utils/: __init__.py  exif.py  image_loader.py
src/claim_photo_editor/views/: __init__.py  grid_view.py  photo_view.py  settings_dialog.py  sidebar.py  welcome_dialog.py
tests/: __init__.py  conftest.py  test_config.py  test_exif.py  test_pdf_generator.py  test_photo.py  test_updater.py
